# pogo-analyzer

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  IV_Optimization_Playbook.md  LICENSE  README.md  microbench_simple_table.py  pogo_analyzer_integration.md  pokemon_go_value_framework_enhanced.md  pokemon_value_formulas_enhanced.md  pvp_scoreboard_fixed.csv  pvp_scoreboard_generator.py  pvp_scoreboard_max_sp.csv  pyproject.toml  raid_scoreboard_generator.py  requirements.txt  test.py  ux-ui2.md  ux_ui.md
.ci-venv/: pyvenv.cfg
.github/workflows/: ci.yml
.pytest_tmp/test_missing_pandas_skips_exce0/: raid_scoreboard.csv
benchmarks/: consistency_check.py  consistency_report.csv  fetch_reference_gameinfo.py  fetch_reference_simple.py  quick_consistency.py  quick_consistency_report.csv  reference_external.csv  scoreboard_benchmark.py
benchmarks/benchmarks/: consistency_report.csv  reference_external.csv
benchmarks/normalized_data/: exclusive_moves.json  learnsets.json  normalized_moves.json  normalized_species.json
data/: cp_multipliers.json  pokemon_moves.json  pokemon_stats.json
docs/: api.md  cli.md  data_refresh.md  formulas.md  gui_ux.md  learnsets.md  pvp.md
mobile/: README.md
normalized_data/: exclusive_moves.json  learnsets.json
pogo_analyzer/: __init__.py  best_moves.py  cpm_table.py  data_refresh.py  export_config.py  formulas.py  gamemaster_import.py  gui_app.py  gui_launch.py  learnsets_refresh.py  pve.py  pvp.py  raid_entries.py  scoreboard.py  scoring.py  simple_table.py  ui_helpers.py
pogo_analyzer/data/: __init__.py  base_stats.json  base_stats.py  move_guidance.py  raid_entries.json  raid_entries.py
pogo_analyzer/scoring/: __init__.py  metrics.py
pogo_analyzer/tables/: __init__.py  simple_table.py
pogodata/: __init__.py  cp.py  loader.py  models.py
src/pogo_analyzer/: __init__.py  analysis.py  api.py  calculations.py  cli.py  data_loader.py  errors.py  events.py  models.py  observability.py  social.py  (+2 more)
tests/: conftest.py  test_api.py  test_base_stats.py  test_calculations.py  test_cli.py  test_cli_enhanced_defaults.py  test_cli_parsing_errors.py  test_cli_variant_constraints.py  test_cpm_table.py  test_data_layer.py  test_data_loader.py  test_data_refresh.py  test_events.py  test_formulas.py  test_formulas_edge_cases.py  test_golden_enhanced_vs_baseline.py  test_gui_cache_compat.py  test_infer_level_edge_cases.py  test_learnsets_refresh.py  test_package_exports.py  test_pve.py  test_pve_input_validation.py  test_pve_rotation_examples.py  test_pvp.py  test_pvp_availability_penalty.py  test_pvp_bait_model.py  test_pvp_inputs.py  test_pvp_iv_opt.py  test_pvp_score_examples.py  test_pvp_scoreboard.py  test_pyproject_metadata.py  test_raid_scoreboard.py  test_scoreboard_smoke.py  test_social.py  test_team_builder.py  test_ui_helpers.py  test_vision.py
(+2 files in other folders)
