[build-system]
requires = [
    "setuptools>=69",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "pogo-analyzer"
version = "0.2.0"
description = "Pokémon GO raid scoring utilities and scoreboard generator."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "PoGo Analyzer Contributors" },
]
dependencies = [
    "typing_extensions>=4.7",
]

[project.optional-dependencies]
pandas = [
    "pandas>=2.0",
    "openpyxl>=3.1",
]
gui = [
    "streamlit>=1.32",
]

[project.scripts]
pogo-raid-scoreboard = "raid_scoreboard_generator:main"
pogo-data-refresh = "pogo_analyzer.data_refresh:main"
pogo-pvp-scoreboard = "pvp_scoreboard_generator:main"
pogo-learnsets-refresh = "pogo_analyzer.learnsets_refresh:main"
pogo-analyzer-gui = "pogo_analyzer.gui_launch:main"

[tool.setuptools]
py-modules = [
    "raid_scoreboard_generator",
    "microbench_simple_table",
    "pvp_scoreboard_generator",
]

[tool.setuptools.packages.find]
include = ["pogo_analyzer*"]

[tool.setuptools.package-data]
"pogo_analyzer.data" = ["*.json"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
src = ["pogo_analyzer", "."]
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
exclude = ["^build/"]

[[tool.mypy.overrides]]
module = ["pandas", "pandas.*", "tomli", "tomllib"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--basetemp=.pytest_tmp"

